<resources>
    <string name="app_name">Agro Noobs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Início</string>
    <string name="menu_list_operation">Listar operações</string>
    <string name="login">Login</string>
    <string name="username">Digite o email</string>
    <string name="password">Digite a senha</string>
    <string name="logout">SAIR</string>
    <string name="view_operations">Ver Operações</string>
    <string name="add_operations">Adicionar Operação</string>
    <string name="todo">TODO</string>
    <string name="add_operation">Adicionar operação</string>
    <string name="next">Próximo</string>
    <string name="back">VOLTAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="define_location">Defina a localização</string>
    <string name="define_operation">Defina a operação</string>
    <string name="define_start">Definir início</string>
    <string name="start_image">Enviar imagem</string>
    <string name="send_image">Enviar imagem</string>
    <string name="cancel">CANCELAR</string>
    <string name="prove_image">imagem de prova</string>
    <string name="define_finish">Definir fim</string>
    <string name="finish">Finalizar</string>
    <string name="define_acquired_quatity">Indique o peso coletado (Kg)</string>
    <string name="define_collected_value">Defina o valor coletado</string>
    <string name="define_details">Defina os detalhes</string>
</resources>