<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.com.noobs.agronoobs.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_add_operation"
        android:name="br.com.noobs.agronoobs.ui.operation.create.CreateOperation"
        android:label="@string/add_operation"
        tools:layout="@layout/fragment_create_operation">
        <action
            android:id="@+id/action_navAddOperation_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_list_operations"
        android:name="br.com.noobs.agronoobs.ui.operation.list.ListOperation"
        android:label="@string/menu_list_operation"
        tools:layout="@layout/fragment_list_operation" />
</navigation>