<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.operation.create.CreateOperation">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="32dp"
        android:text="@string/define_details"
        android:textSize="32sp"
        android:weightSum="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/ll_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view"
        app:layout_constraintVertical_bias="0.300">

        <LinearLayout
            android:id="@+id/define_location_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginHorizontal="25dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/define_location"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/actv_define_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/define_operation"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/actv_define_operation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/define_start_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="25dp"
            android:orientation="vertical"
            android:visibility="gone">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/define_start"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/define_start_position"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="12dp"
                android:inputType="numberDecimal" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/send_image_start_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp"
                    android:text="@string/send_image" />

                <ImageView
                    android:id="@+id/image_view_start"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="28dp"
                    android:contentDescription="@string/prove_image"
                    android:scaleType="fitXY" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/define_finish_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="25dp"
            android:orientation="vertical"
            android:visibility="gone">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/define_finish"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/define_finish_position"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="12dp"
                android:inputType="numberDecimal" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/send_image_finish_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp"
                    android:text="@string/send_image" />

                <ImageView
                    android:id="@+id/image_view_finish"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="28dp"
                    android:contentDescription="@string/prove_image"
                    android:scaleType="fitXY" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/define_acquired_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="25dp"
            android:orientation="vertical"
            android:visibility="gone">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/define_acquired_quatity"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/define_acquired_quantity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="12dp"
                android:inputType="numberDecimal" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>